creados los html index iniciarsesion registrarse

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -1,15 +1,59 @@
-<!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+    <!DOCTYPE html>
+<html lang="es">
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Este texto es el título del documento</title>
+        <meta charset="utf-8">
+        <meta name="description" content="Este es un documento HTML5">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <link rel="stylesheet" href="css/paginaPrincipal.css">
     </head>
     <body>
-        <div>TODO write content</div>
+        <header id="cabeceralogo">
+            <div>
+                <h1>WallaVito06</h1>
+                <div>
+                    <h2><a href="registrarse.html">Registrarse</a></h2>
+                    <h3><a href="login.html">Iniciar Sesión</a></h3>
+                </div>
+            </div>
+        </header>
+        <nav id="menuprincipal">
+            <div>
+                <ul id="listamenu">
+                    <li><a href="fotos.html">Todas las Categorías</a>
+                        <ul>
+                            <li><a href="familia.html">TV,Audio y Foto</a></li>
+                            <li><a href="vacaciones.html">Consolas y Videojuegos</a></li>
+                            <li><a href="vacaciones.html">Móviles y Telefonía</a></li>
+                            <li><a href="vacaciones.html">Informática y Electrónica</a></li>
+                            <li><a href="vacaciones.html">Bicicletas</a></li>
+                            <li><a href="vacaciones.html">Servicios</a></li>
+                            <li><a href="vacaciones.html">Empleo</a></li>
+                            <li><a href="vacaciones.html">Electrodomésticos</a></li>
+                            <li><a href="vacaciones.html">Coleccionismo</a></li>                        
+                            <li><a href="vacaciones.html">Hogar y Jardín</a></li>
+                            <li><a href="vacaciones.html">Vacaciones</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="index.html">Coches</a></li>
+                    <li><a href="videos.html">Motos</a></li>
+                    <li><a href="contacto.html">Motor y Accesorios</a></li>
+                    <li><a href="vacaciones.html">Moda y Accesorios</a></li>
+                    <li><a href="vacaciones.html">Inmobiliaria</a></li>
+
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <div>
+
     </body>
+    <header id="pie">
+        <foother>
+        <address>Vitoria-Gasteiz, Álava</address>      
+        <small>&copy; 2023, WallaVito06 </small>
+    </foother>
+    </header>
 </html>
+
+
