cambios en login y registrarse

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -5,15 +5,16 @@
         <meta charset="utf-8">
         <meta name="description" content="Este es un documento HTML5">
         <meta name="keywords" content="HTML, CSS, JavaScript">
-        <link rel="stylesheet" href="css/paginaPrincipal.css">
+        <link rel="stylesheet" href="css/index.css">
+        <script src="indexedb.js"></script>
     </head>
     <body>
         <header id="cabeceralogo">
             <div>
                 <h1>WallaVito06</h1>
                 <div>
-                    <h2><a href="registrarse.html">Registrarse</a></h2>
-                    <h3><a href="login.html">Iniciar Sesión</a></h3>
+                    <!--<h2><a href="registrarse.html">Registrarse</a></h2>-->
+                    <h3><a href="login.html" class="enlace">Iniciar Sesión</a></h3>
                 </div>
             </div>
         </header>
