--- a/HTML5Application/public_html/login.html
+++ b/HTML5Application/public_html/login.html
@@ -11,15 +11,18 @@
                 <h1>Iniciar Sesión</h1>
             </div>
             <form action="#" method="post">
-                <label for="password">Usuario</label>
-                <input type="text" id="user" name="user" required>
+                <label for="user"></label>
+                <input type="text" id="user" name="user" placeholder="Usuario" required>
             </form>
             <form action="#" method="post">
-                <label for="password">Contraseña:</label>
-                <input type="text" id="password" name="password" required>
+                <label for="password"></label>
+                <input id="password" type="text" name="password" placeholder="Contraseña" required>
             </form>
             <div>
-                <button type="submit">Iniciar Sesión</button>
+                <button type="submit" class="botonPersonalizado">Iniciar Sesión</button>
+            </div>
+            <div>
+                <h2><a href="registrarse.html" class="enlace">Registrarse</a></h2>
             </div>
         </header>    
 
