--- a/HTML5Application/public_html/registrarse.html
+++ b/HTML5Application/public_html/registrarse.html
@@ -11,27 +11,31 @@
                 <h1>Registrarse</h1>
             </div>
             <form action="#" method="post">
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name" required>
+                <label for="name"></label>
+                <input type="text" id="name" name="name" placeholder="Nombre" required>
             </form>
             <form action="#" method="post">
-                <label for="surname">Apellido:</label>
-                <input type="text" id="surname" name="surname" required>
+                <label for="surname"></label>
+                <input type="text" id="surname1" name="surname1" placeholder="Primer Apellido" required>
             </form>
             <form action="#" method="post">
-                <label for="email">E-mail:</label>
-                <input type="text" id="email" name="email" required>
+                <label for="surname"></label>
+                <input type="text" id="surname2" name="surname2" placeholder="Segundo Apellido" required>
             </form>
             <form action="#" method="post">
-                <label for="user">Usuario:</label>
-                <input type="text" id="user" name="user" required>
+                <label for="email"></label>
+                <input type="text" id="email" name="email" placeholder="E-mail" required>
             </form>
             <form action="#" method="post">
-                <label for="password">Contraseña:</label>
-                <input type="text" id="password" name="password" required>
+                <label for="user"></label>
+                <input type="text" id="user" name="user" placeholder="Usuario" required>
+            </form>
+            <form action="#" method="post">
+                <label for="password"></label>
+                <input type="text" id="password" name="password" placeholder="Contraseña" required>
             </form>
             <div>
-                <button type="submit">Registrarse</button>
+                <button class="botonRegistrarse" type="submit">Registrarse</button>
             </div>
         </header>    
         
