cambios en login y registrarse, y en subir producto

--- a/HTML5Application/public_html/indexLogueado.html
+++ b/HTML5Application/public_html/indexLogueado.html
@@ -15,7 +15,10 @@
                 <h1>WallaVito06</h1>
                 <div>
                     <!--<h2><a href="registrarse.html">Registrarse</a></h2>-->
-                    <h3><a href="login.html" class="enlace">Iniciar sesión</a></h3>
+                    <h3>
+                        <a href="index.html" class="enlace">Cerrar sesión</a>
+                        <a href="subirProducto.html" class="subirProducto">Subir producto</a>
+                    </h3>
                 </div>   
             </div>
         </header>
@@ -53,7 +56,7 @@
     <header>
         <form class="formulario-busqueda" action="/buscar" method="get">
             <label for="busqueda"></label>
-            <input type="text" id="busqueda" name="q" placeholder="Ingrese su búsqueda">
+            <input type="text" id="busqueda" name="busqueda" placeholder="Ingrese su búsqueda">
             <br>
             <input type="submit" id="buscar-btn" value="Buscar">
         </form>
