--- a/HTML5Application/public_html/registrarse.html
+++ b/HTML5Application/public_html/registrarse.html
@@ -19,16 +19,12 @@
                 <input type="text" id="surname1" name="surname1" placeholder="Primer Apellido" required>
             </form>
             <form action="#" method="post">
-                <label for="surname"></label>
-                <input type="text" id="surname2" name="surname2" placeholder="Segundo Apellido" required>
+                <label for="photo"></label>
+                <input type="url" id="photo" name="photo" placeholder="Foto de perfil" required>
             </form>
             <form action="#" method="post">
                 <label for="email"></label>
                 <input type="text" id="email" name="email" placeholder="E-mail" required>
-            </form>
-            <form action="#" method="post">
-                <label for="user"></label>
-                <input type="text" id="user" name="user" placeholder="Usuario" required>
             </form>
             <form action="#" method="post">
                 <label for="password"></label>
