cambios en la interfaz general

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
 <html lang="es">
     <head>
+        <link rel="icon" href="img/logo1.png" type="image/x-icon">
         <title>Este texto es el título del documento</title>
         <meta charset="utf-8">
         <meta name="description" content="Este es un documento HTML5">
@@ -11,7 +12,9 @@
     <body>
         <header id="cabeceralogo">
             <div id="contenedorLogo">
-                <img src="img/logo1.png" alt="Logo WallaVito06" id="logo">
+                <a href="index.html">
+                    <img src="img/logo1.png" alt="Logo WallaVito06" id="logo">
+                </a>
                 <h1>WallaVito06</h1>
                 <div>
                     <!--<h2><a href="registrarse.html">Registrarse</a></h2>-->
@@ -24,6 +27,7 @@
                 <ul id="listamenu">
                     <li><a href="fotos.html">Todas las Categorías</a>
                         <ul>
+                            
                             <li><a href="familia.html">TV,Audio y Foto</a></li>
                             <li><a href="vacaciones.html">Consolas y Videojuegos</a></li>
                             <li><a href="vacaciones.html">Móviles y Telefonía</a></li>
