--- a/HTML5Application/public_html/indexLogueado.html
+++ b/HTML5Application/public_html/indexLogueado.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
 <html lang="es">
     <head>
+        <link rel="icon" href="img/logo1.png" type="image/x-icon">
         <title>Este texto es el título del documento</title>
         <meta charset="utf-8">
         <meta name="description" content="Este es un documento HTML5">
@@ -11,13 +12,19 @@
     <body>
         <header id="cabeceralogo">
             <div id="contenedorLogo">
-                <img src="img/logo1.png" alt="Logo WallaVito06" id="logo">
+                <a href="indexLogueado.html">
+                    <img src="img/logo1.png" alt="Logo WallaVito06" id="logo">
+                </a>
                 <h1>WallaVito06</h1>
                 <div>
                     <!--<h2><a href="registrarse.html">Registrarse</a></h2>-->
                     <h3>
                         <a href="index.html" class="enlace">Cerrar sesión</a>
                         <a href="subirProducto.html" class="subirProducto">Subir producto</a>
+                        <div class="Bienvenido">
+                            <p>Bienvenido, nombre</p>
+                            <div class="imagenUsuario" id="vistaPrevia"></div>
+                        </div>
                     </h3>
                 </div>   
             </div>
