--- a/HTML5Application/public_html/login.html
+++ b/HTML5Application/public_html/login.html
@@ -1,5 +1,6 @@
 <html lang="es">
     <head>
+        <link rel="icon" href="img/logo1.png" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/login.css">
@@ -8,6 +9,9 @@
     <body> 
         <header id="cabeceraLogo">
             <div>
+                <a href="index.html">
+                    <img src="img/logo1.png" alt="Logo WallaVito06" id="logo">
+                </a>
                 <h1>Iniciar Sesión</h1>
             </div>
             <form action="#" method="post">
