--- a/HTML5Application/public_html/subirProducto.html
+++ b/HTML5Application/public_html/subirProducto.html
@@ -4,41 +4,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/subirProducto.css">
         <link rel="stylesheet" href="css/subirProducto.css" type="text/css"/>
-
+        <link rel="icon" href="img/logo1.png" type="image/x-icon">
         <title> Subir Producto </title>
     </head>
     <body> 
         <header id="cabeceraLogo">
             <div>
+                <a href="indexLogueado.html">
+                    <img src="img/logo1.png" alt="Logo WallaVito06" id="logo">
+                </a>
                 <h1>Subir Producto</h1>
             </div>
             <div>
-                        <!-- Campo de Nombre -->
                    <label for="nombre"></label>
-                   <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
+                   <input type="text" id="nombre" name="nombre" placeholder="Nombre del producto" required>
                    <br>
-
-                   <!-- Categorías Desplegables -->
                    <label for="categoria">Categoría:</label>
                    <select id="categoria" name="categoria">
                        <option value="electronica">Electrónica</option>
                        <option value="ropa">Ropa</option>
                        <option value="hogar">Hogar</option>
-                       <!-- Agrega más opciones según sea necesario -->
                    </select>
                    <br>
-
-                   <!-- Campo de Precio -->
                    <label for="precio"></label>
                    <input type="number" id="precio" name="precio" min="0" step="0.01" placeholder="Precio" required>
                    <br>
-
-                   <!-- Inserción de Imagen -->
                    <label for="imagen">Imagen:</label>
                    <input type="file" id="imagen" name="imagen"  accept="image/*">
                    <br>
-
-                   <!-- Campo de Fecha con Calendario (implementación básica) -->
                    <label for="fecha">Fecha:</label>
                    <input type="date" id="fecha" name="fecha" required>
                    <br>
