--- a/HTML5Application/public_html/indexLogueado.html
+++ b/HTML5Application/public_html/indexLogueado.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Este es un documento HTML5">
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <link rel="stylesheet" href="css/index.css">
-        <script src="indexedb.js"></script>
+        <script src="js/indexedb.js"></script>
     </head>
     <body>
         <header id="cabeceralogo">
@@ -17,10 +17,10 @@
                 </a>
                 <h1>WallaVito06</h1>
                 <div>
-                    <!--<h2><a href="registrarse.html">Registrarse</a></h2>-->
                     <h3>
                         <a href="index.html" class="enlace">Cerrar sesión</a>
                         <a href="subirProducto.html" class="subirProducto">Subir producto</a>
+                        <a href="misProductos.html" class="subirProducto">Mis productos</a>
                         <div class="Bienvenido">
                             <p>Bienvenido, nombre</p>
                             <div class="imagenUsuario" id="vistaPrevia"></div>
@@ -32,40 +32,25 @@
         <nav id="menuprincipal">
             <div>
                 <ul id="listamenu">
-                    <li><a href="fotos.html">Todas las Categorías</a>
+                    <li><a>Todas las Categorías</a>
                         <ul>
-                            <li><a href="familia.html">TV,Audio y Foto</a></li>
-                            <li><a href="vacaciones.html">Consolas y Videojuegos</a></li>
-                            <li><a href="vacaciones.html">Móviles y Telefonía</a></li>
-                            <li><a href="vacaciones.html">Informática y Electrónica</a></li>
-                            <li><a href="vacaciones.html">Bicicletas</a></li>
-                            <li><a href="vacaciones.html">Servicios</a></li>
-                            <li><a href="vacaciones.html">Empleo</a></li>
-                            <li><a href="vacaciones.html">Electrodomésticos</a></li>
-                            <li><a href="vacaciones.html">Coleccionismo</a></li>                        
-                            <li><a href="vacaciones.html">Hogar y Jardín</a></li>
-                            <li><a href="vacaciones.html">Vacaciones</a></li>
+                            <li><a>TV,Audio y Foto</a></li>
+                            <li><a>Consolas y Videojuegos</a></li>
                         </ul>
                     </li>
-                    <li><a href="index.html">Coches</a></li>
-                    <li><a href="videos.html">Motos</a></li>
-                    <li><a href="contacto.html">Motor y Accesorios</a></li>
-                    <li><a href="vacaciones.html">Moda y Accesorios</a></li>
-                    <li><a href="vacaciones.html">Inmobiliaria</a></li>
 
                 </ul>
             </div>
         </nav>
         <main>
             <div>
-
     </body>
     <header>
-        <form class="formulario-busqueda" action="/buscar" method="get">
-            <label for="busqueda"></label>
-            <input type="text" id="busqueda" name="busqueda" placeholder="Ingrese su búsqueda">
+        <form class="formulario-buscar" action="/buscar" method="get">
+            <label for="buscar"></label>
+            <input type="text" id="buscar" name="buscar" placeholder="Ingrese su búsqueda">
             <br>
-            <input type="submit" id="buscar-btn" value="Buscar">
+            <input type="submit" id="buscar" value="Buscar">
         </form>
     </header>
     <header id="pie">
