--- a/HTML5Application/public_html/login.html
+++ b/HTML5Application/public_html/login.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/login.css">
+        <script src="indexedb.js"></script>
         <title>Registrarse</title>
     </head>
     <body> 
@@ -15,8 +16,8 @@
                 <h1>Iniciar Sesión</h1>
             </div>
             <form action="#" method="post">
-                <label for="user"></label>
-                <input type="text" id="user" name="user" placeholder="Usuario" required>
+                <label for="email"></label>
+                <input type="text" id="email" name="email" placeholder="Email" required>
             </form>
             <form action="#" method="post">
                 <label for="password"></label>
@@ -24,9 +25,6 @@
             </form>
             <div>
                 <button type="submit" class="botonPersonalizado">Iniciar Sesión</button>
-            </div>
-            <div>
-                <h2><a href="registrarse.html" class="enlace">Registrarse</a></h2>
             </div>
         </header>    
 
