--- a/HTML5Application/public_html/subirProducto.html
+++ b/HTML5Application/public_html/subirProducto.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/subirProducto.css">
         <link rel="stylesheet" href="css/subirProducto.css" type="text/css"/>
         <link rel="icon" href="img/logo1.png" type="image/x-icon">
+        <script src="js/indexedb.js"></script>
         <title> Subir Producto </title>
     </head>
     <body> 
